<resources>
    <string name="app_name">AlarmBomb</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="success_login">Login Success</string>
    <string name="failed_login">Check your Email and Password Again!</string>
    <string name="alarm_bomb">ALARM BOMB!</string>
    <string name="success_signup">Sign Up Success</string>
    <string name="failed_signup">Sign Up Fail, check again.</string>


    <string name="activity_minlabel">Minimum</string>
    <string name="activity_avglabel">Average</string>
    <string name="activity_maxlabel">Maximum</string>
    <string name="activity_curlabel">Real Time</string>

    <string name="activity_infobull">This is a custom message box</string>
    <string name="activity_infotitle">About Decibel</string>
    <string name="activity_infobutton">Ok</string>
    <string name="activity_recStartErr">Unable to start recording</string>
    <string name="activity_recBusyErr">Recorder is busy or permission to record is prohibited</string>
    <string name="activity_recFileErr">Can not create file</string>

    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_password_condition">Password length: 4 ~ 16</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_sign_up">Sign Up</string>
    <string name="signup_id">ID</string>
    <string name="signup_phone">Phone</string>
    <string name="signup_phone_text">Phone# without "-"</string>
    <string name="signup_id_text">Unique ID</string>
    <string name="signup_email_text">Type email.</string>
    <string name="signup_bank">Bank</string>
    <string name="signup_account">Account#</string>
    <string name="signup_email_type">Email type</string>
</resources>
