<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/signupBank"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="51dp"
        android:layout_toEndOf="@+id/textView6"
        android:entries="@array/bankList"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="92dp"
        android:text="@string/signup_email" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="134dp"
        android:text="@string/signup_password" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="189dp"
        android:text="@string/signup_account" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="239dp"
        android:text="@string/signup_bank" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="301dp"
        android:text="@string/signup_id" />

    <TextView
        android:id="@+id/userphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="369dp"
        android:text="@string/signup_phone" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/signupAccountNumLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="177dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/textView5"
        android:ems="10">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signupAccountNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint='account # without "-"' />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/signupEmailLayout"
        android:layout_width="189dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/textView4"
        android:ems="10">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_email_text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signupPasswordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/textView8"
        android:ems="10">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_password_condition" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signupUserIDLayout"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/user"
        android:ems="10">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signupUserID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_id_text" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/signupPhoneLayout"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/userphone"
        android:ems="10">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signupPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_phone_text" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="141dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="45dp"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up"
        android:textStyle="bold" />

</RelativeLayout>